# thrustscan

./: README.md
data_structure/: .actire_thrustparallel.hpp.swp  actire_parallel.cpp  actire_parallel.hpp  actire_parallel_device.cu  actire_parallel_device.hpp  actire_test  compile_basic.sh
test/: Makefile.am
